--- a/css/style.css
+++ b/css/style.css
@@ -2042,7 +2042,7 @@ h6 {
 }
 
 .switch:checked + .switch__label::before {
-  transform: translateX(20px);
+  transform: translate(20px, -50%);
 }
 
 .switch:checked + .switch__label::after {
@@ -2081,7 +2081,7 @@ h6 {
   box-shadow: 0px 4px 8px rgba(44, 39, 56, 0.2);
   position: absolute;
   top: 50%;
-  transform: translateY(-50%);
+  transform: translate(0px, -50%);
   left: 4px;
   z-index: 1;
   transition: 0.4s ease;
